# netscigenie-package

./: LICENSE.txt  README.md  pyproject.toml
src/netscigenie/: __about__.py  __init__.py  genie.py
