[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netscigenie"
version = "0.1"
description = 'A simple Python package that provides the essential functions in NetSci research.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "MostafaAlkady", email = "mohamed.al@northeastern.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/MostafaAlkady/netscigenie#readme"
Issues = "https://github.com/MostafaAlkady/netscigenie/issues"
Source = "https://github.com/MostafaAlkady/netscigenie"